force-app/main/default/objects/Car__c/fields/Car_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Car_Id_c__c</fullName>
    <label>Car_Id__c</label>
    <type>AutoNumber</type>
    <displayFormat>AUTO-{0000}</displayFormat>
    <startingNumber>1</startingNumber>
</CustomField>