force-app/main/default/objects/Car__c/fields/Destination_c__c.field-meta.xml
<CustomField>
    <fullName>Destination_c__c</fullName>
    <label>Destination__c</label>
    <type>Text</type>
    <length>120</length>
</CustomField>