force-app/main/default/objects/Car__c/fields/Model_c__c.field-meta.xml
<CustomField>
    <fullName>Model_c__c</fullName>
    <label>Model__c</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>